[tool.poetry]
name = "dploy"
version = "0.1.3-beta"
description = "Provides functionality similar to GNU Stow as a cross platform CLI tool and Python 3 module"
license = "MIT"
authors = ["Ryan Carney <arecarn@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/arecarn/dploy"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Utilities"
]
packages = [
    { include = "dploy" },
    { include = "tests" },
]
include = [
    ".pylintrc",
    "CHANGELOG.md",
    "conftest.py",
    "invoke.yaml",
    "requirements.txt",
    "tasks.py",
]

[tool.poetry.scripts]
dploy = "dploy.__main__:main"

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = { version = ">=1.0.0", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = ">=4.6"
pytest-cov = ">=2.6.0"
pylint = "^2.0"
radon = ">=2.0.3"
invoke = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
